# sdlpp

./: .gitmodules  CMakeLists.txt  Doxyfile  Makefile.am  configure.ac  demo.cpp  sdldummy.cpp  sdlpp.cpp  sdlpp.hpp  sdlpp_csdl.hpp  sdlpp_main.hpp  test.cpp
cmake/: FindSDL2.cmake
demos/: CMakeLists.txt  Makefile.am  basic_draw.cpp  canvas.cpp  color_key.cpp  color_mod.cpp  common.cpp  common.hpp  config.h.in  ewait.cpp  flip.cpp  hello.cpp  luascript.cpp  luasdl.cpp  sprite.cpp
demos/data/: luasdl.lua
